@@ -11,6 +11,16 @@ WriteMakefile(
     LIBS              => ['-lpuzzle'], # e.g., '-lm'
     DEFINE            => '', # e.g., '-DHAVE_SOMETHING'
     INC               => '', # e.g., '-I. -I/usr/include/other'
+    META_MERGE        => {
+        'meta-spec' => { version => 2 },
+        resources => {
+            repository  => {
+                type => 'git',
+                web  => 'https://github.com/estrabd/Image-Libpuzzle',
+                url  => 'https://github.com/estrabd/Image-Libpuzzle.git',
+            },
+        },
+    },
     # Un-comment this if you add C files to link with later:
     # OBJECT            => '$(O_FILES)', # link all the C files too
 );
